# rust-three-days-course

./: .gitignore  Cargo.toml  HelloWorld  README.md  TODO.md  outline.md
assignments/: connected-mailbox.adoc  connected-mailbox.md  fizzbuzz.md  mailbox-conversions.md  messaging-through-http.md  redisish.adoc  redisish.html  redisish.md
assignments/IO-assignment/: result-option-assignment.adoc
assignments/JSON-assignment/: Cargo.toml  assignment.md
assignments/JSON-assignment/solution/: step_1.rs  step_2.rs  step_3and4.rs
assignments/JSON-assignment/src/: main.rs
assignments/JSON-assignment/src/lib/: data_01.txt  data_02.txt
assignments/XML-assignment/: Cargo.toml  assignment.md
assignments/XML-assignment/solution/: 01.rs  02.rs
assignments/XML-assignment/src/: main.rs
assignments/XML-assignment/src/lib/: file.xml
communication-material/: README.md
communication-material/de-DE/: greeting-email.md  requirements.md
communication-material/en-US/: greeting-email.md  requirements.md
courses/: default.html  default.md  english.html  english.md  spanish.html  spanish.md
example/: README.md
example/c-lib/: Cargo.toml  build.rs  test.sh
example/cpp/: Cargo.toml  build.rs
example/proptest/: Cargo.toml  proptest_slides.html
example/tcp-mailbox/: Notes.md
hello-world/: Cargo.toml
paths/: florian-gilcher.md
presentation/: .gitignore  LICENSE  TODO.md  index.html  table-of-contents.html  table-of-contents.md
rust-cheat-sheet/: index.html  package-lock.json  style.css
seattle/: README.adoc  package-lock.json  package.json
src/: lib.rs
(+374 files in other folders)
