[package]
name = "JSON-assignment"
version = "0.1.0"
authors = ["Mirabellensaft <tanks@ferrous-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.44"
serde = { version = "1.0", features = ["derive"]}
