[package]
name = "XML-assignment"
version = "0.1.0"
authors = ["Mirabellensaft <tanks@ferrous-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8"
serde-xml-rs = "0.3.1"
serde = { version = "1.0", features = ["derive"]}
